--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -152,7 +152,7 @@
 		display: none;
 	}
 	#brand_container{
-		margin-top: 30px;
+		margin-top: 10px;
 	}
 	#footer_icons{
 		text-align: right;
